--- a/Indecision App/ClientApp/src/styles/styles.scss
+++ b/Indecision App/ClientApp/src/styles/styles.scss
@@ -4,6 +4,6 @@
 @import './components/button';
 @import './components/container';
 @import './components/header';
-@import './components/modal';
+@import './components/option-modal';
 @import './components/option';
 @import './components/widget';
