--- a/Indecision App/ClientApp/src/styles/components/_option-modal.scss
+++ b/Indecision App/ClientApp/src/styles/components/_option-modal.scss
@@ -17,7 +17,7 @@
     opacity: 0;
 }
 
-.modal{
+.option-modal{
     background: $light-blue;
     color:white;
     max-width: 30rem;
@@ -26,11 +26,11 @@
     text-align: center;
 }
 
-.modal__title{
+.option-modal__title{
     margin: 0 0 $m-size 0;
 }
 
-.modal__body{
+.option-modal__body{
     font-size: 2rem;
     font-weight: 300;
     margin: 0 0 $l-size 0;
